# pyreball

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  mypy.ini  pyproject.toml  requirements_examples.txt  requirements_examples_py38.txt  requirements_test.txt  setup.py  tox.ini
.github/workflows/: build_and_upload.yml  tests.yml
docs/: basic_printing.md  cli_parameters.md  code_blocks.md  config_file.md  configuration.md  custom_functions.md  index.md  plotting.md  references.md  requirements.txt  tables.md  text_utils.md
docs/api/: pyreball_html.md  pyreball_text.md
docs/examples/: basic_print.py  basic_print_code.py  basic_print_div.py  basic_print_headings.py  basic_print_multi.py  basic_print_title.py  basic_print_title_with_headings.py  code_blocks_basic.py  code_blocks_params.py  custom_multi_figure.py  custom_tags.py  example_init.html  example_init.py  example_init_deps.py  plotting_bokeh.py  plotting_matplotlib_png.py  plotting_matplotlib_svg.py  plotting_plotly.py  plotting_seaborn.py  plotting_seaborn_figure_level.py  plotting_vega_altair.py  references.py  references_simple.py  script_with_args.py  table_align.py  table_align_columns.py  table_caption_position.py  table_captions.py  table_datatables_definition.py  table_multiindex.py  table_paging.py  table_scrolling.py  table_searching.py  table_simplest.py  table_sorting.py  table_styling.py  text_utils_code.py  text_utils_code_json.py  text_utils_code_no_highlight.py  text_utils_formatting.py  (+6 more)
docs/plugins/: main.py
examples/: custom_arguments.html  custom_arguments.py  large_table_report.html  large_table_report.py  longer_report.html  longer_report.py  multi_graphs.html  multi_graphs.py  report.html  report.py  sample_plots.html  sample_plots.py  simple.html  simple.py
pyreball/: .gitignore  __init__.py  __main__.py  _common.py  config_generator.py  constants.py  html.py  text.py
pyreball/cfg/: config.ini  css.template  html.template  html_begin.template  html_end.template  styles.template
pyreball/utils/: logger.py  param.py  template.py  template_utils.py  utils.py
src/pyreball/: __init__.py  __main__.py  _common.py  config_generator.py  constants.py  html.py  text.py
src/pyreball/cfg/: css.template  external_links.ini
src/pyreball/utils/: logger.py  param.py  template.py
tests/: conftest.py  test_html.py  test_main.py  test_text.py
tests/utils/: test_param.py  test_template.py  test_template_utils.py  test_utils.py
